--- a/login.html
+++ b/login.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="utf-8">
     <title>Meu Amigo Pet</title>
-    <link href="style.css" rel="stylesheet">
-    <link href="login_style.css" rel="stylesheet">
+    <link href="assets/css/style.css" rel="stylesheet">
+    <link href="assets/css/login_style.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -13,7 +13,7 @@
         rel="stylesheet">
 
     <!-- Favicons -->
-    <link href="img/apple-touch-icon.png" rel="icon">
+    <link href="assets/img/apple-touch-icon.png" rel="icon">
 </head>
 
 <body>
