--- a/main_page.html
+++ b/main_page.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>Meu Amigo Pet</title>
-    <link href="style.css" rel="stylesheet">
+    <link href="assets/css/style.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -12,7 +12,7 @@
         rel="stylesheet">
 
     <!-- Favicons -->
-    <link href="img/apple-touch-icon.png" rel="icon">
+    <link href="assets/img/apple-touch-icon.png" rel="icon">
 </head>
 
 <body>
