--- a/login.html
+++ b/login.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="utf-8">
     <title>Meu Amigo Pet</title>
-    <link href="assets/css/style.css" rel="stylesheet">
     <link href="assets/css/login_style.css" rel="stylesheet">
+    <link href="assets/css/style.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -68,21 +68,21 @@
             </form>
         </div>
 
-        <!--<div class="img-pet col-md-6">
+        <!-- <div class="img-pet-col-md-6">
             <img src="img/header-pet-na-cabine.png" alt="" id="pet-na-cabine">
-        </div>-->
+        </div> -->
     </div>
 
     <!-- ======= Rodapé ========= -->
     <footer id="footer">
         <div class="fcontainer">
             <div class="col">
-                <h5>contatos</h5>
+                <h5 class="ftitle">contatos</h5>
                 <p>+55 (16) 3241-1413<br>
                     meu.amigo.pet@usp.br</p>
             </div>
             <div class="col">
-                <h5>endereço</h5>
+                <h5 class="ftitle">endereço</h5>
                 <p>Rua Alberto Janequine, 32
                     Bairro Jardim Olivia
                     São Caetano do Norte, SP
@@ -90,7 +90,7 @@
 
             </div>
             <div class="col">
-                <h5>sobre nós</h5>
+                <h5 class="ftitle">sobre nós</h5>
                 <p>Lorem Ipsum is simply dummy text
                     of the printing and typesetting industry.
                     Lorem Ipsum has been the industry's standard dummy
