Começando a construção da página inicial

--- a/main_page.html
+++ b/main_page.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <title>Meu Amigo Pet</title>
     <link href="assets/css/style.css" rel="stylesheet">
+    <link href="assets/css/main_page.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -51,6 +52,23 @@
 
     </header>
     <!-- ======= Fim Cabeçalho ======= -->
+
+    <div class="wrapper">
+        <div class="cards-wrap">
+            <div class="card-item">
+                <div class="card-inner">
+                    <img src="assets/img/header-pet-na-cabine.png">
+                    <p>ABLUBLELBE</p>
+                </div>
+            </div>
+            <div class="card-item">
+                <div class="card-inner">
+                    <img src="assets/img/header-pet-na-cabine.png">
+                    <p>Serviço, seila oque</p>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <!-- ======= Rodapé ========= -->
     <footer id="footer">
