--- a/login.html
+++ b/login.html
@@ -68,9 +68,9 @@
             </form>
         </div>
 
-        <!-- <div class="img-pet-col-md-6">
-            <img src="img/header-pet-na-cabine.png" alt="" id="pet-na-cabine">
-        </div> -->
+        <div class="img-pet">
+            <img src="assets/img/header-pet-na-cabine.png" alt="" id="pet-na-cabine">
+        </div>
     </div>
 
     <!-- ======= Rodapé ========= -->
