login e cadastro ok

--- a/cadastro.html
+++ b/cadastro.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <title>Meu Amigo Pet</title>
     <link href="assets/css/style.css" rel="stylesheet">
+    <link href="assets/css/login_signup.css" rel="stylesheet">
     <link href="assets/css/signup.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
