ajuste em login e cadastro

--- a/cadastro.html
+++ b/cadastro.html
@@ -65,7 +65,13 @@
                     <input type="email" id="femail" name="femail" placeholder="e-mail" required>
                 </div>
                 <div class="cpf">
-                    <input type="text" id="ftext" name="ftext" placeholder="cpf" required>
+                    <input type="text" id="fcpf" name="fcpf" placeholder="cpf" required>
+                </div>
+                <div class="endereço">
+                    <input type="text" id="fend" name="fend" placeholder="endereço" required>
+                </div>
+                <div class="telefone">
+                    <input type="telephone" id="ftel" name="ftel" placeholder="telefone" required>
                 </div>
                 <div class="senha">
                     <input type="password" id="fpassword" name="fpassword" placeholder="senha" required>
