--- a/login.html
+++ b/login.html
@@ -18,88 +18,92 @@
 </head>
 
 <body>
+    <div class="page-wrapper">
 
-    <!-- ======= Cabeçalho ======= -->
-    <header id="header">
+        <!-- ======= Cabeçalho ======= -->
+        <header id="header">
 
-        <nav class="nav-menu">
-            <ul>
-                <li class="drop-down"><a href="">acessórios</a>
-                    <ul>
-                        <li><a href="acessorios.html#roupas">roupas</a></li>
-                        <li><a href="acessorios.html#camas_casinhas">camas e casinhas</a></li>
-                        <li><a href="acessorios.html#brinquedos">brinquedos</a></li>
-                        <li><a href="acessorios.html#alimentacao">alimentação</a></li>
-                    </ul>
-                </li>
-                <li class="drop-down"><a href="">serviços</a>
-                    <ul>
-                        <li><a href="servicos.html#about">banho</a></li>
-                        <li><a href="servicos.html#services">tosa</a></li>
-                    </ul>
-                </li>
-                <li class="drop-down"><a href="">comidinhas</a>
-                    <ul>
-                        <li><a href="comidinhas.html#cards">petiscos</a></li>
-                        <li><a href="comidinhas.html#portfolio">rações</a></li>
-                    </ul>
-                </li>
-                <li><a href="main_page.html"><strong>meu amigo pet</strong></a></li>
-                <li><a href="login.html">entrar</a></li>
-                <li><a href="cadastro.html">cadastrar</a></li>
-                <li><a href="carrinho.html">carrinho</a></li>
-            </ul>
-        </nav>
+            <nav class="nav-menu">
+                <ul>
+                    <li class="drop-down"><a href="">acessórios</a>
+                        <ul>
+                            <li><a href="accessories.html#clothing">roupas</a></li>
+                            <li><a href="accessories.html#bed_houses">camas e casinhas</a></li>
+                            <li><a href="accessories.html#toys">brinquedos</a></li>
+                            <li><a href="accessories.html#food_accessories">alimentação</a></li>
+                        </ul>
+                    </li>
+                    <li class="drop-down"><a href="">serviços</a>
+                        <ul>
+                            <li><a href="services.html#about">banho</a></li>
+                            <li><a href="services.html#services">tosa</a></li>
+                        </ul>
+                    </li>
+                    <li class="drop-down"><a href="">comidinhas</a>
+                        <ul>
+                            <li><a href="foods.html#snacks">petiscos</a></li>
+                            <li><a href="foods.html#pet_food">rações</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="index.html"><strong>meu amigo pet</strong></a></li>
+                    <li><a href="login.html">entrar</a></li>
+                    <li><a href="sign_up.html">cadastrar</a></li>
+                    <li><a href="shop_cart.html">carrinho</a></li>
+                </ul>
+            </nav>
 
-    </header>
-    <!-- ======= Fim Cabeçalho ======= -->
+        </header>
+        <!-- ======= Fim Cabeçalho ======= -->
 
-    <div class="container">
-        <div class="acessar-conta">
-            <h4>Acesse sua conta</h4>
-            <p>é novo por aqui? <a href="cadastro.html"><strong>cadastre-se</strong></a></p>
-            <form class="formulario">
-                <div class="email">
-                    <input type="email" id="femail" name="femail" placeholder="e-mail" required>
+        <div class="container">
+            <div class="sign-in-flexbox">
+                <div class="sign-in">
+                    <h4>Acesse sua conta</h4>
+                    <p>é novo por aqui? <a href="sign_up.html"><strong>cadastre-se</strong></a></p>
+                    <form class="formulary">
+                        <div class="email">
+                            <input type="email" id="femail" name="femail" placeholder="e-mail" required>
+                        </div>
+                        <div class="password">
+                            <input type="password" id="fpassword" name="fpassword" placeholder="senha" required>
+                        </div>
+                        <input class="btn_submit" type="submit" value="Entrar">
+                    </form>
                 </div>
-                <div class="senha">
-                    <input type="password" id="fpassword" name="fpassword" placeholder="senha" required>
+
+                <div class="pet-img">
+                    <img src="assets/img/header-pet-na-cabine.png" alt="" class="form-pet-logo">
                 </div>
-                <input class="btn_submit" type="submit" value="Entrar">
-            </form>
+            </div>
         </div>
 
-        <div class="img-pet">
-            <img src="assets/img/header-pet-na-cabine.png" alt="" id="pet-na-cabine">
-        </div>
+        <!-- ======= Rodapé ========= -->
+        <footer id="footer">
+            <div class="fcontainer">
+                <div class="col">
+                    <h5 class="ftitle">contatos</h5>
+                    <p>+55 (16) 3241-1413<br>
+                        meu.amigo.pet@usp.br</p>
+                </div>
+                <div class="col">
+                    <h5 class="ftitle">endereço</h5>
+                    <p>Rua Alberto Janequine, 32
+                        Bairro Jardim Olivia
+                        São Caetano do Norte, SP
+                        Brasil</p>
+
+                </div>
+                <div class="col">
+                    <h5 class="ftitle">sobre nós</h5>
+                    <p>Lorem Ipsum is simply dummy text
+                        of the printing and typesetting industry.
+                        Lorem Ipsum has been the industry's standard dummy
+                        text ever since the 1500s, when an unknown printer
+                    </p>
+                </div>
+            </div>
+        </footer>
     </div>
-
-    <!-- ======= Rodapé ========= -->
-    <footer id="footer">
-        <div class="fcontainer">
-            <div class="col">
-                <h5 class="ftitle">contatos</h5>
-                <p>+55 (16) 3241-1413<br>
-                    meu.amigo.pet@usp.br</p>
-            </div>
-            <div class="col">
-                <h5 class="ftitle">endereço</h5>
-                <p>Rua Alberto Janequine, 32
-                    Bairro Jardim Olivia
-                    São Caetano do Norte, SP
-                    Brasil</p>
-
-            </div>
-            <div class="col">
-                <h5 class="ftitle">sobre nós</h5>
-                <p>Lorem Ipsum is simply dummy text
-                    of the printing and typesetting industry.
-                    Lorem Ipsum has been the industry's standard dummy
-                    text ever since the 1500s, when an unknown printer
-                </p>
-            </div>
-        </div>
-    </footer>
 </body>
 
 </html>
