--- a/login.html
+++ b/login.html
@@ -46,7 +46,7 @@
                         </ul>
                     </li>
                     <li><a href="index.html"><strong>meu amigo pet</strong></a></li>
-                    <li><a href="login.html">entrar</a></li>
+                    <li><a href="login.html" class="current_page">entrar</a></li>
                     <li><a href="sign_up.html">cadastrar</a></li>
                     <li><a href="shop_cart.html">carrinho</a></li>
                 </ul>
