--- a/sign_up.html
+++ b/sign_up.html
@@ -47,7 +47,7 @@
                     </li>
                     <li><a href="index.html"><strong>meu amigo pet</strong></a></li>
                     <li><a href="login.html">entrar</a></li>
-                    <li><a href="sign_up.html">cadastrar</a></li>
+                    <li><a href="sign_up.html" class="current_page">cadastrar</a></li>
                     <li><a href="shop_cart.html">carrinho</a></li>
                 </ul>
             </nav>
