--- a/sign_up.html
+++ b/sign_up.html
@@ -60,22 +60,28 @@
                 <h4>Cadastre sua conta</h4>
                 <form class="formulary">
                     <div class="name">
-                        <input type="text" id="fname" name="name" placeholder="nome" required>
+                        <input type="text" id="fname" name="name" placeholder=" " autocomplete="off" required>
+                        <label>nome</label>
                     </div>
                     <div class="email">
-                        <input type="email" id="femail" name="femail" placeholder="e-mail" required>
+                        <input type="email" id="femail" name="femail" placeholder=" " autocomplete="off" required>
+                        <label>e-mail</label>
                     </div>
                     <div class="cpf">
-                        <input type="text" id="fcpf" name="fcpf" placeholder="cpf" required>
+                        <input type="text" id="fcpf" name="fcpf" placeholder=" " required>
+                        <label>cpf</label>
                     </div>
                     <div class="address">
-                        <input type="text" id="faddress" name="faddress" placeholder="endereço" required>
+                        <input type="text" id="faddress" name="faddress" placeholder=" " required>
+                        <label>endereço</label>
                     </div>
                     <div class="telephone">
-                        <input type="telephone" id="ftel" name="ftel" placeholder="telefone" required>
+                        <input type="telephone" id="ftel" name="ftel" placeholder=" " required>
+                        <label>telefone</label>
                     </div>
                     <div class="password">
-                        <input type="password" id="fpassword" name="fpassword" placeholder="senha" required>
+                        <input type="password" id="fpassword" name="fpassword" placeholder=" " required>
+                        <label>senha</label>
                     </div>
                     <input class="btn_submit" type="submit" value="Entrar">
                 </form>
