--- a/login.html
+++ b/login.html
@@ -62,10 +62,12 @@
                     <p>é novo por aqui? <a href="sign_up.html"><strong>cadastre-se</strong></a></p>
                     <form class="formulary">
                         <div class="email">
-                            <input type="email" id="femail" name="femail" placeholder="e-mail" required>
+                            <input type="email" id="femail" name="femail" placeholder=" " required autocomplete="off">
+                            <label>e-mail</label>
                         </div>
                         <div class="password">
-                            <input type="password" id="fpassword" name="fpassword" placeholder="senha" required>
+                            <input type="password" id="fpassword" name="fpassword" placeholder=" " required>
+                            <label>senha</label>
                         </div>
                         <input class="btn_submit" type="submit" value="Entrar">
                     </form>
